--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -118,7 +118,7 @@
        <item>
         <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>Error Rate:</string>
+          <string>Accuracy:</string>
          </property>
         </widget>
        </item>
@@ -152,13 +152,13 @@
        <item>
         <widget class="QDoubleSpinBox" name="doubleSpinBoxLearnRate">
          <property name="decimals">
-          <number>4</number>
+          <number>6</number>
          </property>
          <property name="singleStep">
           <double>0.010000000000000</double>
          </property>
          <property name="value">
-          <double>0.200000000000000</double>
+          <double>0.000500000000000</double>
          </property>
         </widget>
        </item>
@@ -176,6 +176,26 @@
          </property>
          <property name="singleStep">
           <double>0.010000000000000</double>
+         </property>
+         <property name="value">
+          <double>0.600000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>BatchSize:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QSpinBox" name="spinBoxBatchSize">
+         <property name="maximum">
+          <number>9999</number>
+         </property>
+         <property name="value">
+          <number>64</number>
          </property>
         </widget>
        </item>
