--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -427,6 +427,16 @@
         </widget>
        </item>
        <item>
+        <widget class="QPushButton" name="pushButtonReset">
+         <property name="toolTip">
+          <string>Reset accuracy, chart, epoch, iteration and reinitialise the network</string>
+         </property>
+         <property name="text">
+          <string>Reset</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="controlsBottomSpacer">
          <property name="orientation">
           <enum>Qt::Orientation::Vertical</enum>
